java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField5-hints.pass
Create field t in org.netbeans.test.java.hints.CreateField5
Create parameter t
Create local variable t
